--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,33 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ddb225be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.data_utils import load_and_preprocess, split_data\n",
+    "from src.next_token_dataset import NextTokenDataset\n",
+    "\n",
+    "from transformers import BertTokenizerFast\n",
+    "\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "eece79e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_STATE = 42\n",
+    "\n",
+    "SEQ_LEN = 20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48556c90",
+   "metadata": {},
+   "source": [
+    "Выполним загрузку и обработку текстовых данных, просмотрим первые строки:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "86cf4eb0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GPU: NVIDIA RTX A5000\n",
-      "CC: (8, 6)\n",
-      "VRAM (GB): 23.98779296875\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    awww that s a bummer you shoulda got david car...\n",
+       "1    is upset that he can t update his facebook by ...\n",
+       "2    i dived many times for the ball managed to sav...\n",
+       "3       my whole body feels itchy and like its on fire\n",
+       "4    no it s not behaving at all i m mad why am i h...\n",
+       "Name: cleaned_text, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import torch\n",
-    "torch.cuda.is_available()\n",
+    "df = load_and_preprocess(\"data/raw_dataset.txt\")\n",
     "\n",
-    "print(\"GPU:\", torch.cuda.get_device_name(0))\n",
-    "print(\"CC:\", torch.cuda.get_device_capability(0))\n",
-    "print(\"VRAM (GB):\", torch.cuda.get_device_properties(0).total_memory / 1024**3)"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b999302",
+   "metadata": {},
+   "source": [
+    "Выполним разбиение на обучающую, тренировочную и валидационную выборки и выведем их размер:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8b0f9e7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1601127"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1280901"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "160113"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "160113"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "train_texts, val_texts, test_texts = split_data(df, RANDOM_STATE)\n",
+    "\n",
+    "display(len(df))\n",
+    "display(len(train_texts))\n",
+    "display(len(test_texts))\n",
+    "display(len(val_texts))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b25eb83e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# загружаем токенизатор\n",
+    "tokenizer = BertTokenizerFast.from_pretrained(\"bert-base-uncased\")\n",
+    "\n",
+    "# тренировочный, тестовый и валидационный датасеты\n",
+    "train_dataset = NextTokenDataset(train_texts, tokenizer, seq_len=SEQ_LEN)\n",
+    "test_dataset = NextTokenDataset(test_texts, tokenizer, seq_len=SEQ_LEN)\n",
+    "val_dataset = NextTokenDataset(val_texts, tokenizer, seq_len=SEQ_LEN)\n",
+    "\n",
+    "# даталоадеры\n",
+    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=64) \n",
+    "test_loader = DataLoader(val_dataset, batch_size=64) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b0f9e7e",
+   "id": "0235521e",
    "metadata": {},
    "outputs": [],
    "source": []
