--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ddb225be",
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.data_utils import load_and_preprocess, split_data\n",
     "from src.next_token_dataset import NextTokenDataset\n",
+    "from src.lstm_model import LSTMAutocomplete\n",
+    "from src.lstm_train import LSTMTrainer\n",
     "\n",
     "from transformers import BertTokenizerFast\n",
     "\n",
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "eece79e7",
    "metadata": {},
    "outputs": [],
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b25eb83e",
    "metadata": {},
    "outputs": [],
@@ -142,7 +144,7 @@
     "# даталоадеры\n",
     "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=64) \n",
-    "test_loader = DataLoader(val_dataset, batch_size=64) "
+    "test_loader = DataLoader(test_dataset, batch_size=64) "
    ]
   },
   {
@@ -150,8 +152,99 @@
    "execution_count": null,
    "id": "0235521e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Device: cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 29576/29576 [04:06<00:00, 120.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 | Train Loss: 5.266 | Val Loss: 5.220\n",
+      "------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 29576/29576 [04:02<00:00, 121.89it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2 | Train Loss: 4.886 | Val Loss: 5.223\n",
+      "------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 29576/29576 [04:03<00:00, 121.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3 | Train Loss: 4.776 | Val Loss: 5.259\n",
+      "------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 29576/29576 [04:03<00:00, 121.52it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4 | Train Loss: 4.714 | Val Loss: 5.299\n",
+      "------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 29576/29576 [04:00<00:00, 122.85it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5 | Train Loss: 4.672 | Val Loss: 5.336\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab_size = tokenizer.vocab_size\n",
+    "\n",
+    "# создаем и обучаем модель\n",
+    "model = LSTMAutocomplete(vocab_size, hidden_dim=128)\n",
+    "trainer = LSTMTrainer(model, vocab_size)\n",
+    "\n",
+    "trainer.fit(train_loader, val_loader, n_epochs=3)"
+   ]
   }
  ],
  "metadata": {
