--- a/solution.ipynb
+++ b/solution.ipynb
@@ -157,21 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cuda\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 29576/29576 [04:06<00:00, 120.13it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 | Train Loss: 5.266 | Val Loss: 5.220\n",
+      "Device: cuda\n",
       "------------------------------\n"
      ]
     },
@@ -179,59 +165,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29576/29576 [04:02<00:00, 121.89it/s]\n"
+      "100%|██████████| 35296/35296 [04:58<00:00, 118.27it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2 | Train Loss: 4.886 | Val Loss: 5.223\n",
-      "------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 29576/29576 [04:03<00:00, 121.33it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3 | Train Loss: 4.776 | Val Loss: 5.259\n",
-      "------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 29576/29576 [04:03<00:00, 121.52it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4 | Train Loss: 4.714 | Val Loss: 5.299\n",
-      "------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 29576/29576 [04:00<00:00, 122.85it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5 | Train Loss: 4.672 | Val Loss: 5.336\n",
+      "Epoch 1 | Train Loss: 5.219 | Val Loss: 5.184\n",
       "------------------------------\n"
      ]
     }
@@ -240,7 +181,7 @@
     "vocab_size = tokenizer.vocab_size\n",
     "\n",
     "# создаем и обучаем модель\n",
-    "model = LSTMAutocomplete(vocab_size, hidden_dim=128)\n",
+    "model = LSTMAutocomplete(vocab_size, hidden_dim=128, eos_token_id=tokenizer.sep_token_id)\n",
     "trainer = LSTMTrainer(model, vocab_size)\n",
     "\n",
     "trainer.fit(train_loader, val_loader, n_epochs=3)"
