Added ROUGE metric and examples of generation

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -11,6 +11,7 @@
     "from src.next_token_dataset import NextTokenDataset\n",
     "from src.lstm_model import LSTMAutocomplete\n",
     "from src.lstm_train import LSTMTrainer\n",
+    "from src.eval_lstm import evaluate_rouge\n",
     "\n",
     "from transformers import BertTokenizerFast\n",
     "\n",
@@ -165,15 +166,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 35296/35296 [04:58<00:00, 118.27it/s]\n"
+      "100%|██████████| 35296/35296 [04:48<00:00, 122.46it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 | Train Loss: 5.219 | Val Loss: 5.184\n",
+      "Epoch 1 | Train Loss: 5.223 | Val Loss: 5.185\n",
       "------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4470/4470 [10:53<00:00,  6.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metrics\n",
+      "rouge1: 0.0657\n",
+      "rouge2: 0.0066\n",
+      "rougeL: 0.0643\n",
+      "rougeLsum: 0.0643\n"
      ]
     }
    ],
@@ -182,9 +201,40 @@
     "\n",
     "# создаем и обучаем модель\n",
     "model = LSTMAutocomplete(vocab_size, hidden_dim=128, eos_token_id=tokenizer.sep_token_id)\n",
-    "trainer = LSTMTrainer(model, vocab_size)\n",
+    "trainer = LSTMTrainer(model, tokenizer, vocab_size)\n",
     "\n",
     "trainer.fit(train_loader, val_loader, n_epochs=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c1c8cb28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i want to go to\n",
+      "my body feels like i\n",
+      "you shoulda got a new\n"
+     ]
+    }
+   ],
+   "source": [
+    "# сгенерируем несколько токенов\n",
+    "prefix = torch.tensor(tokenizer.encode(\"i want to\", add_special_tokens=False))\n",
+    "generated_ids = model.generate(prefix, max_new_tokens=2)\n",
+    "print(tokenizer.decode(generated_ids.tolist()))\n",
+    "\n",
+    "prefix = torch.tensor(tokenizer.encode(\"my body feels\", add_special_tokens=False))\n",
+    "generated_ids = model.generate(prefix, max_new_tokens=2)\n",
+    "print(tokenizer.decode(generated_ids.tolist()))\n",
+    "\n",
+    "prefix = torch.tensor(tokenizer.encode(\"you shoulda got\", add_special_tokens=False))\n",
+    "generated_ids = model.generate(prefix, max_new_tokens=2)\n",
+    "print(tokenizer.decode(generated_ids.tolist()))"
    ]
   }
  ],
